# Shopify

./: README.md
parts/: .gitignore  CMakeLists.txt  inventory.cpp  inventory.csv  inventory.h  item.cpp  item.h  main.cpp  todo.txt
parts/src/: CMakeLists.txt  display.cpp  display.h  gfxutils.cpp  gfxutils.h  inventory.cpp  inventory.csv  inventory.h  item.cpp  item.h  items.txt  main.cpp  map.cpp  map.csv  map.h  mesh.cpp  mesh.h  polygon.cpp  polygon.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  userlist.cpp  userlist.h  userlist.txt  utils.cpp  utils.h  vertex.cpp  vertex.h
parts/src/parts/: userlist.txt
parts/src/res/shaders/: basicShaderFragment.glsl  basicShaderVertex.glsl  circleShaderFragment.glsl  lineShaderFragment.glsl  lineShaderThickFragment.glsl  lineShaderThickVertex.glsl  lineShaderVertex.glsl
